--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -5860,7 +5860,7 @@ h3 {
 }
 .section-hero {
     text-align: center;
-    background: url(../../images/hero.png) center;
+    background: url(../../images/bg.JPG) center;
     background-size: cover;
 }
 @media (max-width:1200px) {
@@ -6014,9 +6014,6 @@ h3 {
     line-height: 26px;
 }
 .section-features .row>div {
-    border-color: rgba(255, 255, 255, .1);
-    border-width: 0 1px 1px 0;
-    border-style: solid;
     padding-bottom: 51px;
 }
 @media (max-width:767px) {
